tests/snapshots/query_result_advanced__search_request_sparse_vector.snap
---
source: tests/query_result_advanced.rs
expression: req
---
MemorySearchRequest {
    namespace: "sparse_idx",
    query_vector: [],
    query_sparse: Some(
        SparseVector(
            {
                10: 1.5,
                42: 2.0,
                100: 0.8,
            },
        ),
    ),
    filters: {},
    text_query: None,
    top_k: 30,
    distance_metric: Cosine,
    explain: false,
    exclude_superseded: false,
    search_profile: None,
    range: None,
    group_by: None,
    mmr: None,
    cursor: None,
}
