tests/snapshots/query_result_advanced__search_request_with_profile_keyword.snap
---
source: tests/query_result_advanced.rs
expression: req
---
MemorySearchRequest {
    namespace: "docs",
    query_vector: [],
    query_sparse: None,
    filters: {},
    text_query: Some(
        "api reference",
    ),
    top_k: 15,
    distance_metric: Cosine,
    explain: true,
    exclude_superseded: true,
    search_profile: Some(
        SearchProfileConfig {
            mode: Keyword,
            rrf_k: None,
            candidate_k: None,
        },
    ),
    range: None,
    group_by: None,
    mmr: None,
    cursor: None,
}
